[gd_scene load_steps=2 format=3 uid="uid://c3r01cs4dyp0i"]

[ext_resource type="Script" uid="uid://djcjcf5tcai7w" path="res://scripts/upgrade_option.gd" id="1"]

[node name="UpgradeOption" type="Button"]
custom_minimum_size = Vector2(200, 100)
offset_right = 200.0
offset_bottom = 100.0
script = ExtResource("1")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0

[node name="NameLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Upgrade Name"
horizontal_alignment = 1

[node name="LevelLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Level 1/5"
horizontal_alignment = 1

[node name="DescriptionLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Upgrade Description"
horizontal_alignment = 1
autowrap_mode = 3
